# repo-man

./: .adr-dir  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  repo-types.cfg  setup.cfg
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: code-issue.md
.github/workflows/: codeql-analysis.yml  packaging.yml
docs/: CHANGELOG.md  conf.py  index.rst
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-use-alpha-versioning-during-initial-development.md  0003-use-a-config-file-to-store-repository-flavors.md  0004-use-consistent-repo-man-stylization.md  0005-use-click-for-cli-parsing.md  0006-change-flavor-terminology-to-type.md  0007-use-typer-for-cli-parsing.md
src/repo_man/: cli.py  consts.py  utils.py
src/repo_man/commands/: add.py  edit.py  flavors.py  implode.py  init.py  list_repos.py  remove.py  sniff.py  types.py
src/repoman/: cli.py
test/: conftest.py  test_add.py  test_edit.py  test_flavors.py  test_implode.py  test_init.py  test_list_repos.py  test_remove.py  test_repoman.py  test_sniff.py  test_types.py  test_utils.py  test_version.py
